--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ actix-web = "4.3.1"
 actix-web-prom = "0.6.0"
 futures = "0.3.28"
 prometheus = "0.13.3"
+uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
