--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", features = ["macros"] }
+teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
 log = "0.4"
 pretty_env_logger = "0.5.0"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
@@ -14,8 +14,9 @@ reqwest = "0.11.17"
 regex = "1.8.1"
 once_cell = "1.17.1"
 serde_json = "1.0.96"
-actix-web = "4.3.1"
-actix-web-prom = "0.6.0"
+axum = "0.6.18"
+axum-prometheus = "0.3.3"
+hyper = "1.0.0-rc.3"
 futures = "0.3.28"
 prometheus = "0.13.3"
 uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
