--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - GOOGLE_MAPS_API_KEY
       - RUST_LOG
       - CACHE_TIME
+      - GAPI_MODE
       - WEBHOOK_URL
     expose:
       - 8080
