--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ GOOGLE_MAPS_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 RUST_LOG=info
 CACHE_TIME=3600
 GAPI_MODE=GeoPlace
+MSG_LOC_LIMIT=3
 WEBHOOK_URL=
