--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
 strum = "0.24.1"
 strum_macros = "0.24.3"
 rust-i18n = "2.1.0"
+async-trait = "0.1.68"
