--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,6 @@ strum = "0.24.1"
 strum_macros = "0.24.3"
 rust-i18n = "2.1.0"
 async-trait = "0.1.68"
-http-cache-reqwest = "0.9.0"
+http-cache-reqwest = { version = "0.9.0", default-features = false, features = ["manager-moka"] }
 reqwest-middleware = "0.2.2"
 anyhow = "1.0.71"
