Use Yandex Maps as a data provider

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 TELOXIDE_TOKEN=0123456789:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 GOOGLE_MAPS_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+YANDEX_MAPS_GEOCODER_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+YANDEX_MAPS_PLACES_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 RUST_LOG=info
 CACHE_TIME=3600
 GAPI_MODE=GeoPlace
+YAPI_MODE=Place
 MSG_LOC_LIMIT=10
 WEBHOOK_URL=
