Resolve #1 - Inline requests limiter

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@ GAPI_MODE=GeoPlace
 YAPI_MODE=Place
 MSG_LOC_LIMIT=10
 WEBHOOK_URL=
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=r@d1shLPBtg
+
+REQUESTS_LIMITER_MAX_ALLOWED=10
+REQUESTS_LIMITER_TIMEFRAME=60
