Integration with `user-service`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ axum = "0.6.18"
 axum-prometheus = "0.3.3"
 hyper = "1.0.0-rc.3"
 futures = "0.3.28"
+tonic = "0.10.2"
+prost = "0.12.3"
+prost-types = "0.12.3"
+prost-wkt-types = "0.5.0"
 prometheus = "0.13.3"
 uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
 strum = "0.24.1"
@@ -31,6 +35,13 @@ anyhow = "1.0.71"
 redis = { version = "0.23.3", features = ["ahash", "tokio-comp", "connection-manager"] }
 mobc = "0.8.1"
 mobc-redis = "0.8.0"
+chashmap = "2.2.2"
+derive_more = { version = "1.0.0-beta.6", features = ["display", "from", "constructor", "error"] }
+thiserror = "1.0.56"
+sha256 = "1.5.0"
 
 [dev-dependencies]
 testcontainers = "0.14.0"
+
+[build-dependencies]
+tonic-build = "0.10.2"
