--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,8 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=r@d1shLPBtg
 
+GRPC_ADDR_USER_SERVICE=124.0.0.1:8090
+USER_CACHE_TIME_SECS=360
+
 REQUESTS_LIMITER_MAX_ALLOWED=10
 REQUESTS_LIMITER_TIMEFRAME=60
