--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
+teloxide = { version = "0.12", features = ["macros", "webhooks-axum", "redis-storage"] }
 log = "0.4"
 pretty_env_logger = "0.5.0"
 tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
 reqwest = "0.11.17"
 regex = "1.8.1"
 once_cell = "1.17.1"
+serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.96"
 axum = "0.6.18"
 axum-prometheus = "0.3.3"
@@ -33,6 +34,7 @@ http-cache-reqwest = { version = "0.9.0", default-features = false, features = [
 reqwest-middleware = "0.2.2"
 anyhow = "1.0.71"
 redis = { version = "0.23.3", features = ["ahash", "tokio-comp", "connection-manager"] }
+redis-derive = "0.1.7"
 mobc = "0.8.1"
 mobc-redis = "0.8.0"
 chashmap = "2.2.2"
