Clean up users cache periodically

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ REDIS_PASSWORD=r@d1shLPBtg
 
 GRPC_ADDR_USER_SERVICE=124.0.0.1:8090
 USER_CACHE_TIME_SECS=360
+CACHE_CLEAN_UP_INTERVAL_SECS=3600
 
 REQUESTS_LIMITER_MAX_ALLOWED=10
 REQUESTS_LIMITER_TIMEFRAME=60
