--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -13,11 +13,16 @@ jobs:
 
       - name: Check out repository code
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
       - name: Set up Rust
         uses: hecrj/setup-rust-action@v1
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2
 
       - name: Build
         run: cargo build --verbose
@@ -36,6 +41,8 @@ jobs:
 
       - name: Check out repository code
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
 
       - name: Build the Docker image
