Add *user-service* to `docker-compose.yaml`

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,14 @@ CACHE_CLEAN_UP_INTERVAL_SECS=3600
 
 REQUESTS_LIMITER_MAX_ALLOWED=10
 REQUESTS_LIMITER_TIMEFRAME=60
+
+
+### envars for user-service
+
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+POSTGRES_DB=userservicedb
+POSTGRES_USER=userservice
+POSTGRES_PASSWORD=us4pwd
+
+DATABASE_MAX_CONNECTIONS=10
