--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -3,3 +3,6 @@ services:
   redis:
     ports:
       - "${REDIS_PORT}:${REDIS_PORT}"
+  postgres:
+    ports:
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
