--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,9 @@ services:
       - CACHE_CLEAN_UP_INTERVAL_SECS
     expose:
       - 8080
+    networks:
+      - redis-network
+      - user-service-network
     labels:
       - "com.centurylinklabs.watchtower.enable=true"
     logging:
@@ -51,3 +54,56 @@ services:
       - ./data/redis:/data
     logging:
       driver: local
+    networks:
+      - redis-network
+  user-service:
+    image: ghcr.io/kozalo-blog/user-service
+    container_name: locplacebot-user-service
+    restart: unless-stopped
+    environment:
+      - RUST_LOG
+      - DATABASE_URL=postgres://${POSTGRES_USER:?error}:${POSTGRES_PASSWORD:?error}@${POSTGRES_HOST:?error}:${POSTGRES_PORT:-5432}/${POSTGRES_DB:?error}
+      - DATABASE_MAX_CONNECTIONS
+    expose:
+      - 8080
+      - 8090
+    networks:
+      - postgres-network
+      - user-service-network
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+    logging:
+      driver: local
+    depends_on:
+      - postgres
+  postgres:
+    image: postgres:14.5-alpine
+    container_name: locplacebot-user-service-postgres
+    environment:
+      - POSTGRES_PORT
+      - POSTGRES_DB
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - PGDATA=/var/lib/postgresql/data/pgdata
+    expose:
+      - ${POSTGRES_PORT}
+    volumes:
+      - ./data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+    networks:
+      - postgres-network
+    logging:
+      driver: local
+networks:
+  postgres-network:
+    driver: bridge
+  redis-network:
+    driver: bridge
+  user-service-network:
+    driver: bridge
