--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=r@d1shLPBtg
 
-GRPC_ADDR_USER_SERVICE=124.0.0.1:8090
+GRPC_ADDR_USER_SERVICE=user-service:8090
 USER_CACHE_TIME_SECS=360
 CACHE_CLEAN_UP_INTERVAL_SECS=3600
 
