Use user's location for viewport biasing

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ REDIS_PASSWORD=r@d1shLPBtg
 GRPC_ADDR_USER_SERVICE=user-service:8090
 USER_CACHE_TIME_SECS=360
 CACHE_CLEAN_UP_INTERVAL_SECS=3600
+SEARCH_RADIUS_METERS=1000
 
 REQUESTS_LIMITER_MAX_ALLOWED=10
 REQUESTS_LIMITER_TIMEFRAME=60
