Migrate to Google Maps Places API (New)
This code is not very good for production since `HttpCache` caches only HEAD and GET requests, and Google engineers decided to reinvent the Internet again and use POST with JSON for their API.

This commit exists mostly to don't let my efforts just get lost for nothing.

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ YANDEX_MAPS_PLACES_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 RUST_LOG=info
 CACHE_TIME=3600
-GAPI_MODE=GeoPlace
+GAPI_MODE=GeoText
 YAPI_MODE=Place
 MSG_LOC_LIMIT=10
 WEBHOOK_URL=
