--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ tokio = { version =  "1.35.1", default-features = false, features = ["rt-multi-t
 reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
 regex = "1.10.2"
 once_cell = "1.19.0"
+serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.111"
+http = "1.0.0"
+mime = "0.3.17"
 axum = "0.6.20"
 axum-prometheus = "0.3.4"
 hyper = "1.1.0"
