--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ strum = "0.25.0"
 strum_macros = "0.25.3"
 rust-i18n = "2.3.0"
 async-trait = "0.1.77"
-http-cache = { version = "0.11.0", default-features = false, features = ["manager-moka"] }
-http-cache-reqwest = { version = "0.9.0", default-features = false, features = ["manager-moka"] }
+http-cache = { version = "0.11.0", default-features = false }
+http-cache-reqwest = { version = "0.9.0", default-features = false }
 reqwest-middleware = "0.2.4"
 anyhow = "1.0.79"
 redis = { version = "0.24.0", features = ["ahash", "tokio-comp", "connection-manager"] }
@@ -39,6 +39,9 @@ chashmap = "2.2.2"
 derive_more = { version = "1.0.0-beta.6", features = ["display", "from", "constructor", "error"] }
 thiserror = "1.0.56"
 sha256 = "1.5.0"
+serde = { version = "1.0.210", features = ["derive"] }
+http-cache-semantics = "1.0.2"
+bincode = "1.3.3"
 
 [dev-dependencies]
 testcontainers = "0.14.0"
