--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,45 +6,45 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teloxide = { version = "0.12", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler", "redis-storage"] }
-log = "0.4"
+teloxide = { version = "0.13.0", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler", "redis-storage"] }
+log = "0.4.22"
 pretty_env_logger = "0.5.0"
-tokio = { version =  "1.35.1", default-features = false, features = ["rt-multi-thread", "macros"] }
-reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
-regex = "1.10.2"
-once_cell = "1.19.0"
-serde_json = "1.0.111"
-axum = "0.6.20"
-axum-prometheus = "0.3.4"
-hyper = "1.1.0"
-futures = "0.3.30"
-tonic = "0.10.2"
-prost = "0.12.3"
-prost-types = "0.12.3"
-prost-wkt-types = "0.5.0"
-prometheus = "0.13.3"
-uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
-strum = "0.25.0"
-strum_macros = "0.25.3"
-rust-i18n = "2.3.0"
-async-trait = "0.1.77"
-http-cache = { version = "0.11.0", default-features = false }
-http-cache-reqwest = { version = "0.9.0", default-features = false }
-reqwest-middleware = "0.2.4"
-anyhow = "1.0.79"
-redis = { version = "0.24.0", features = ["ahash", "tokio-comp", "connection-manager"] }
-mobc = "0.8.3"
+tokio = { version =  "1.40.0", default-features = false, features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls", "json"] }
+regex = "1.11.0"
+once_cell = "1.20.2"
+serde_json = "1.0.128"
+axum = "0.7.7"
+axum-prometheus = "0.7.0"
+hyper = "1.4.1"
+futures = "0.3.31"
+tonic = "0.12.3"
+prost = "0.13.3"
+prost-types = "0.13.3"
+prost-wkt-types = "0.6.0"
+prometheus = "0.13.4"
+uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
+strum = "0.26.3"
+strum_macros = "0.26.4"
+rust-i18n = "3.1.2"
+async-trait = "0.1.83"
+http-cache = { version = "0.19.0", default-features = false }
+http-cache-reqwest = { version = "0.14.0", default-features = false }
+reqwest-middleware = "0.3.3"
+anyhow = "1.0.89"
+redis = { version = "0.27.4", features = ["ahash", "tokio-comp", "connection-manager"] }
+mobc = "0.8.4"
 mobc-redis = "0.8.2"
 chashmap = "2.2.2"
-derive_more = { version = "1.0.0-beta.6", features = ["display", "from", "constructor", "error"] }
-thiserror = "1.0.56"
+derive_more = { version = "1.0.0", features = ["display", "from", "constructor", "error"] }
+thiserror = "1.0.64"
 sha256 = "1.5.0"
 serde = { version = "1.0.210", features = ["derive"] }
-http-cache-semantics = "1.0.2"
-bincode = "1.3.3"
+http-cache-semantics = "2.1.0"
+bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 
 [dev-dependencies]
-testcontainers = "0.14.0"
+testcontainers = "0.23.1"
 
 [build-dependencies]
-tonic-build = "0.10.2"
+tonic-build = "0.12.3"
