--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ bincode = { version = "2.0.0-rc.3", features = ["serde"] }
 
 [dev-dependencies]
 testcontainers = "0.23.1"
+http = "1.1.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
