Fix #11 — Don't send API requests if an inline query consists of digits, dots and spaces only

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ SEARCH_RADIUS_METERS=1000
 REQUESTS_LIMITER_MAX_ALLOWED=10
 REQUESTS_LIMITER_TIMEFRAME=60
 
+QUERY_CHECK_MODE=regex
+
 
 ### envars for user-service
 
